# torrcli

./: .gitignore  README.md  client.py  dameon.py  download_manager.py  downloader.py  install.sh  pyproject.toml  requirements.txt  torrcli  torrcli.conf.example  torrcli.service  ui.py  uninstall.sh  utils.py
packaging/arch/: PKGBUILD  torrcli-daemon.service  torrcli.install
torrcli/: cli.py
torrcli/client/: ipc.py  ui.py  utils.py
torrcli/client/commands/: download.py  listings.py  manage.py  progress.py  search.py
torrcli/daemon/: alerts.py  config.py  daemon.py  ipc_server.py  session.py
torrcli/daemon/commands/: add.py  list.py  pause.py  progress.py  remove.py  resume.py  utils.py
